# squashing-builder

./: Dockerfile  flake.nix  pyproject.toml
